@@ -43,6 +43,17 @@ import org.apache.lucene.analysis.Tokenizer;
 public class StandardTokenizer extends Tokenizer {
     /** A private instance of the JFlex-constructed scanner */
     private final StandardTokenizerImpl scanner;
+    
+  /**
+   * Specifies whether deprecated acronyms should be replaced with HOST type.
+   * This is false by default to support backward compatibility.
+   *<p/>
+   * See http://issues.apache.org/jira/browse/LUCENE-1068
+   * 
+   * @deprecated this should be removed in the next release (3.0).
+   */
+  private boolean replaceInvalidAcronym = false;
+    
   void setInput(Reader reader) {
     this.input = reader;
   }
@@ -52,11 +63,24 @@ public class StandardTokenizer extends Tokenizer {
      * <code>input</code> to a newly created JFlex scanner.
      */
     public StandardTokenizer(Reader input) {
-	this.input = input;
-	this.scanner = new StandardTokenizerImpl(input);
+	    this.input = input;
+	    this.scanner = new StandardTokenizerImpl(input);
     }
 
-    /*
+  /**
+   * Creates a new instance of the {@link org.apache.lucene.analysis.standard.StandardTokenizer}.  Attaches
+   * the <code>input</code> to the newly created JFlex scanner.
+   *
+   * @param input The input reader
+   * @param replaceInvalidAcronym Set to true to replace mischaracterized acronyms with HOST.
+   *
+   * See http://issues.apache.org/jira/browse/LUCENE-1068
+   */
+  public StandardTokenizer(Reader input, boolean replaceInvalidAcronym) {
+    this.replaceInvalidAcronym = replaceInvalidAcronym;
+    this.input = input;
+    this.scanner = new StandardTokenizerImpl(input);
+  }/*
      * (non-Javadoc)
      *
      * @see org.apache.lucene.analysis.TokenStream#next()
@@ -72,7 +96,19 @@ public class StandardTokenizer extends Tokenizer {
         final int start = scanner.yychar();
         result.setStartOffset(start);
         result.setEndOffset(start+result.termLength());
-        result.setType(StandardTokenizerImpl.TOKEN_TYPES[tokenType]);
+        // This 'if' should be removed in the next release. For now, it converts
+        // invalid acronyms to HOST. When removed, only the 'else' part should
+        // remain.
+        if (tokenType == StandardTokenizerImpl.ACRONYM_DEP) {
+          if (replaceInvalidAcronym) {
+            result.setType(StandardTokenizerImpl.TOKEN_TYPES[StandardTokenizerImpl.HOST]);
+            result.setTermLength(result.termLength() - 1); // remove extra '.'
+          } else {
+            result.setType(StandardTokenizerImpl.TOKEN_TYPES[StandardTokenizerImpl.ACRONYM]);
+          }
+        } else {
+          result.setType(StandardTokenizerImpl.TOKEN_TYPES[tokenType]);
+        }
         return result;
     }
 
@@ -90,4 +126,26 @@ public class StandardTokenizer extends Tokenizer {
         input = reader;
         reset();
     }
+
+  /**
+   * Prior to https://issues.apache.org/jira/browse/LUCENE-1068, StandardTokenizer mischaracterized as acronyms tokens like www.abc.com
+   * when they should have been labeled as hosts instead.
+   * @return true if StandardTokenizer now returns these tokens as Hosts, otherwise false
+   *
+   * @deprecated Remove in 3.X and make true the only valid value
+   */
+  public boolean isReplaceInvalidAcronym() {
+    return replaceInvalidAcronym;
+  }
+
+  /**
+   *
+   * @param replaceInvalidAcronym Set to true to replace mischaracterized acronyms as HOST.
+   * @deprecated Remove in 3.X and make true the only valid value
+   *
+   * See https://issues.apache.org/jira/browse/LUCENE-1068
+   */
+  public void setReplaceInvalidAcronym(boolean replaceInvalidAcronym) {
+    this.replaceInvalidAcronym = replaceInvalidAcronym;
+  }
 }
